--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@nrwl/cli": "14.5.4",
     "@nrwl/js": "14.5.4",
     "@nrwl/workspace": "14.5.4",
+    "@nxrs/cargo": "^0.3.3",
     "nx": "14.5.4",
     "prettier": "^2.6.2",
     "typescript": "~4.7.2"
