--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -3,6 +3,12 @@ name = "core"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+wasm-bindgen = "0.2.82"
+wee_alloc = "0.4.5"
+grep = { git = "https://github.com/dgopsq/ripgrep", branch = "wasm-building-support" }
