Wire the `netgrep` and the `core` package

--- a/packages/netgrep/package.json
+++ b/packages/netgrep/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@netgrep/netgrep",
   "version": "0.0.1",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "core": "../core/pkg"
+  }
 }
