--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -1,6 +1,6 @@
 {
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "projectType": "application",
+  "projectType": "library",
   "sourceRoot": "packages/core/src",
   "targets": {
     "build": {
