--- a/nx.json
+++ b/nx.json
@@ -28,5 +28,19 @@
     "appsDir": "packages",
     "libsDir": "packages"
   },
-  "plugins": ["@nxrs/cargo"]
+  "plugins": ["@nxrs/cargo"],
+  "defaultProject": "example",
+  "generators": {
+    "@nrwl/web:application": {
+      "style": "css",
+      "linter": "eslint",
+      "unitTestRunner": "jest",
+      "e2eTestRunner": "none"
+    },
+    "@nrwl/web:library": {
+      "style": "css",
+      "linter": "eslint",
+      "unitTestRunner": "jest"
+    }
+  }
 }
