--- a/packages/netgrep/project.json
+++ b/packages/netgrep/project.json
@@ -7,7 +7,7 @@
       "executor": "@nrwl/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/packages/netgrep",
+        "outputPath": "packages/netgrep/dist",
         "main": "packages/netgrep/src/index.ts",
         "tsConfig": "packages/netgrep/tsconfig.lib.json",
         "assets": ["packages/netgrep/*.md"]
