Manage NX dependencies

--- a/packages/netgrep/project.json
+++ b/packages/netgrep/project.json
@@ -2,6 +2,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/netgrep/src",
   "projectType": "library",
+  "implicitDependencies": ["core"],
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
@@ -11,7 +12,8 @@
         "main": "packages/netgrep/src/index.ts",
         "tsConfig": "packages/netgrep/tsconfig.lib.json",
         "assets": ["packages/netgrep/*.md"]
-      }
+      },
+      "dependsOn": ["^build"]
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
