--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -7,7 +7,8 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "wasm-pack build",
-        "cwd": "packages/core"
+        "cwd": "packages/core",
+        "outputPath": "packages/core/pkg"
       }
     },
     "test": {
