--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "dependencies": {
-    "netgrep": "../netgrep/dist"
+    "netgrep": "link:../netgrep/dist"
   },
   "devDependencies": {
     "vite": "^3.0.6",
