--- a/packages/example/project.json
+++ b/packages/example/project.json
@@ -2,6 +2,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/example/src",
   "projectType": "application",
+  "implicitDependencies": ["netgrep"],
   "targets": {
     "serve": {
       "executor": "nx:run-commands",
