--- a/packages/netgrep/tsconfig.lib.json
+++ b/packages/netgrep/tsconfig.lib.json
@@ -1,10 +1,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
+    "outDir": "./dist",
     "declaration": true,
     "types": []
   },
-  "include": ["**/*.ts"],
+  "include": ["./src/**/*.ts"],
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
 }
