--- a/packages/netgrep/tsconfig.spec.json
+++ b/packages/netgrep/tsconfig.spec.json
@@ -1,9 +1,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
+    "outDir": "./dist",
     "module": "commonjs",
     "types": ["jest", "node"]
   },
-  "include": ["jest.config.ts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
+  "include": ["jest.config.ts", "./src/**/*.test.ts", "./src/**/*.spec.ts", "./src/**/*.d.ts"]
 }
