--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,13 +1,18 @@
 {
   "name": "example",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "dependencies": {
-    "netgrep": "link:../netgrep/dist"
+    "netgrep": "link:../netgrep/dist",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^3.0.6",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.0.1",
+    "vite": "^3.0.7",
     "vite-plugin-wasm": "^2"
   }
 }
