Update example using debounce

--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "type": "module",
   "dependencies": {
+    "lodash": "^4.17.21",
     "netgrep": "link:../netgrep/dist",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
