--- a/packages/search/project.json
+++ b/packages/search/project.json
@@ -1,27 +1,30 @@
 {
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
-  "sourceRoot": "packages/core/src",
+  "sourceRoot": "packages/search/src",
   "targets": {
     "build": {
       "executor": "nx:run-commands",
       "options": {
         "command": "wasm-pack build --scope netgrep",
-        "cwd": "packages/core",
-        "outputPath": "packages/core/pkg"
+        "cwd": "packages/search",
+        "outputPath": "packages/search/pkg"
       }
     },
     "publish": {
       "executor": "nx:run-commands",
       "options": {
         "command": "wasm-pack pack && wasm-pack publish",
-        "cwd": "packages/core",
-        "outputPath": "packages/core/packed"
+        "cwd": "packages/search",
+        "outputPath": "packages/search/packed"
       }
     },
     "test": {
-      "executor": "@nxrs/cargo:test",
-      "options": {}
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wasm-pack test --chrome --headless",
+        "cwd": "packages/search"
+      }
     },
     "lint": {
       "executor": "@nxrs/cargo:clippy",
