--- a/packages/search/Cargo.toml
+++ b/packages/search/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 wasm-bindgen = "0.2.82"
 wee_alloc = "0.4.5"
+js-sys = "0.3.59"
 grep = { git = "https://github.com/dgopsq/ripgrep", branch = "wasm-building-support" }
 
 [dev-dependencies]
