--- a/packages/search/Cargo.toml
+++ b/packages/search/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 wasm-bindgen = "0.2.82"
 wee_alloc = "0.4.5"
-grep = { git = "https://github.com/dgopsq/ripgrep", branch = "wasm-building-support" }
+grep = { git = "https://github.com/dgopsq/ripgrep", tag = "13.0.0-wasm" }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.32"
