Handle custom metadata in a search query

--- a/packages/netgrep/project.json
+++ b/packages/netgrep/project.json
@@ -26,7 +26,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/packages/netgrep"],
       "options": {
-        "jestConfig": "packages/netgrep/jest.config.ts",
+        "jestConfig": "packages/netgrep/jest.config.js",
         "passWithNoTests": true
       }
     }
