--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@nrwl/cli": "14.5.4",
     "@nrwl/eslint-plugin-nx": "14.5.4",
-    "@nrwl/jest": "14.5.4",
+    "@nrwl/jest": "^14.5.10",
     "@nrwl/js": "14.5.4",
     "@nrwl/linter": "14.5.4",
     "@nrwl/web": "^14.5.4",
@@ -25,7 +25,7 @@
     "babel-jest": "^28.1.3",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
-    "jest": "^28.1.3",
+    "jest": "^29.0.0",
     "jest-environment-jsdom": "^28.1.3",
     "nx": "14.5.4",
     "prettier": "^2.6.2",
