--- a/packages/netgrep/tsconfig.lib.json
+++ b/packages/netgrep/tsconfig.lib.json
@@ -6,5 +6,5 @@
     "types": []
   },
   "include": ["./src/**/*.ts"],
-  "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
+  "exclude": ["jest.config.js", "**/*.spec.ts", "**/*.test.ts"]
 }
