--- a/packages/netgrep/tsconfig.spec.json
+++ b/packages/netgrep/tsconfig.spec.json
@@ -4,5 +4,5 @@
     "outDir": "./dist",
     "types": ["jest", "node"]
   },
-  "include": ["jest.config.ts", "./src/**/*.test.ts", "./src/**/*.spec.ts", "./src/**/*.d.ts"]
+  "include": ["jest.config.js", "./src/**/*.test.ts", "./src/**/*.spec.ts", "./src/**/*.d.ts"],
 }
