Add netgrep test dependency

--- a/packages/netgrep/project.json
+++ b/packages/netgrep/project.json
@@ -28,7 +28,8 @@
       "options": {
         "jestConfig": "packages/netgrep/jest.config.js",
         "passWithNoTests": true
-      }
+      },
+      "dependsOn": ["^build"]
     }
   },
   "tags": []
