Changed export settings

--- a/packages/search/Cargo.toml
+++ b/packages/search/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 repository = "https://github.com/dgopsq/netgrep"
 description = "The power of ripgrep over HTTP"
 license = "MIT"
+main = "search.js"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
