--- a/packages/netgrep/project.json
+++ b/packages/netgrep/project.json
@@ -11,7 +11,7 @@
         "outputPath": "packages/netgrep/dist",
         "main": "packages/netgrep/src/index.ts",
         "tsConfig": "packages/netgrep/tsconfig.lib.json",
-        "assets": ["packages/netgrep/*.md"]
+        "assets": ["README.md"]
       },
       "dependsOn": ["^build"]
     },
