--- a/packages/netgrep/package.json
+++ b/packages/netgrep/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@netgrep/netgrep",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "type": "module",
   "dependencies": {
-    "@netgrep/search": "link:../search/pkg"
+    "@netgrep/search": "^0.1.2"
   }
 }
