Improve the `example` package using pure js
commit 104f26c560aab149ebd4a7076f7a3747c51beabd
Author: Diego Pasquali <5963683+dgopsq@users.noreply.github.com>
Date:   Mon Aug 29 00:28:16 2022 +0200

    Update the various README

commit 2f4ad537cc14881391c5f2dfad55752fdd60fe99
Author: Diego Pasquali <5963683+dgopsq@users.noreply.github.com>
Date:   Mon Aug 29 00:18:44 2022 +0200

    Remove specific `package.json`

commit c966f44a7c3f990361e69cc602b7305a1ed5eda4
Author: Diego Pasquali <5963683+dgopsq@users.noreply.github.com>
Date:   Mon Aug 29 00:08:51 2022 +0200

    Add example tip

commit 54d2a4ca542212a402401518fb5637f7b4014f38
Author: Diego Pasquali <5963683+dgopsq@users.noreply.github.com>
Date:   Mon Aug 29 00:06:43 2022 +0200

    Add search inputs locally

commit d41c7bd36c14324db0c82794888ead5ffe835925
Author: Diego Pasquali <5963683+dgopsq@users.noreply.github.com>
Date:   Sun Aug 28 23:48:40 2022 +0200

    Improve example performance

commit c6363c730e29931a16b720cb43d3389cbad8b7d9
Author: Diego Pasquali <5963683+dgopsq@users.noreply.github.com>
Date:   Sun Aug 28 23:44:15 2022 +0200

    Refine the example adding more inputs

commit f99b528a83f39a0ce892c3d7ee86aaadfa4732c9
Author: Diego Pasquali <5963683+dgopsq@users.noreply.github.com>
Date:   Sun Aug 28 23:19:23 2022 +0200

    Add more comments

commit c0e6a2e48af71895257a503c54e7f70e858bf508
Author: Diego Pasquali <5963683+dgopsq@users.noreply.github.com>
Date:   Sun Aug 28 23:16:03 2022 +0200

    Replace the Vite example with a pure js one

--- a/packages/example/project.json
+++ b/packages/example/project.json
@@ -7,10 +7,9 @@
     "serve": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "yarn vite",
+        "command": "webpack serve --open",
         "cwd": "packages/example"
-      },
-      "dependsOn": ["^build"]
+      }
     }
   },
   "tags": []
