--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@netgrep/netgrep": "^0.1.3",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.4.0"
   },
@@ -25,12 +27,16 @@
     "babel-jest": "^28.1.3",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^28.1.3",
     "nx": "14.5.4",
     "prettier": "^2.6.2",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.0"
   }
 }
