--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -11,7 +11,7 @@ name: Test and lint workflow
 
 jobs:
   test_and_lint:
-    name: Test and build
+    name: Test and lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
