--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "tslib": "^2.4.0"
   },
   "devDependencies": {
+    "@microsoft/api-documenter": "^7.19.7",
+    "@microsoft/api-extractor": "^7.29.5",
     "@nrwl/cli": "14.5.4",
     "@nrwl/eslint-plugin-nx": "14.5.4",
     "@nrwl/jest": "^14.5.10",
